# bil-cs2

./: .gitignore  Makefile  README.md  celerybeat-schedule  diag.puml  docker-compose.yml  example.env  nb.ipynb  nb2.ipynb  nb3.ipynb  nb4.ipynb  nb5.ipynb  nb6.ipynb  nb7.ipynb  nn.ipynb  pyproject.toml
.github/workflows/: ci.yaml
app/: app.py  bot.py  di.py  handlers.py  models.py  pubsub.py  repositories.py  routers.py  serializers.py  services.py  tasks.py
app/handlers/: handlers.py
app/migrations/: 0001_initial.py
auth/: Dockerfile  example.env  main.py
backend/: main.py  tasks.py
bag_of_team_player_game_info/: bag_of_team_player_game_info.py  main.py
clickhouse_loader/: main.py  main_test.py
config/: asgi.py  celery.py  settings.py  urls.py
dags/: extract_from_json_load_to_clickhouse.py  ml_pipeline.py  train_test_split.py
dictionaries/: auth.py  auth_test.py  config.py  main.py  models.py  storage.py  storage_test.py
etl/: Dockerfile  etl.py  etl_test.py  extract.py  extract_test.py  get_service_token.py  get_service_token_test.py  load.py  load_test.py  main.py  transform.py  transform_test.py
extract_from_json_load_to_clickhouse/: extract_from_json_load_to_clickhouse.py  main.py
forecast_results/: main.py
forecaster/: main.py
migrations/: 001_create_users_table.sql  002_create_services_table.sql  003_add_etl_service.sql
ml/: data_loader.py  data_loader_test.py  feature_extraction.py  feature_extraction_test.py  feature_extractors.py  feature_extractors_test.py  feature_selection.py  feature_selection_test.py  load_data.py  load_data_test.py  main.py  main_test.py  metrics.py  metrics_test.py  ml.puml  ml_pipeline.py  predictor.py  predictor_test.py  stacker.py  train_model.py
predictor/: main.py
tasks/: main.py  train_and_publish.py  update_dictionaries.py
train_test_split/: main.py  train_test_split.py
train_test_splitter/: main.py  main_test.py
(+86 files in other folders)
