[tool.poetry]
name = "auth"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "*"
uvicorn = { version = "*", extras = ["standard"] }
asyncpg = "*"
python-dotenv = "*"
pyjwt = "*"
bcrypt = "*"
dateutils = "*"
pydantic = "*"
celery = "*"
redis = "*"
joblib = "*"
scikit-learn = "*"
apache-airflow="*"
mlflow = "^3.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
isort = "*"
autoflake = "*"
testcontainers = "*"
pytest-asyncio = "*"
respx = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
