[tool.poetry]
name = "auth"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Django + REST
django = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "*"
drf-spectacular = "*"

# Celery + Redis
celery = "*"
redis = "*"

# ML
scikit-learn = "*"
joblib = "*"

# Telegram Bot
python-telegram-bot = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
isort = "*"
autoflake = "*"
pytest = "*"
pytest-django = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
